--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://thymeleaf.org">
+<html lang="es" xmlns:th="http://thymeleaf.org"
+xmlns:sec="http://thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="UTF-8">
     <title>Lista Clientes</title>
@@ -18,7 +19,7 @@
                     <th>APELLIDOS</th>
                     <th>EMAIL</th>
                     <th>TELEFONO</th>
-                    <th>ACCIONES</th>
+                    <th sec:authorize="hasRole('ADMIN')">ACCIONES</th>
                 </tr>
             </thead>
 
@@ -28,14 +29,16 @@
                 <td th:text="${cliente.apellido}"></td>
                 <td th:text="${cliente.email}"></td>
                 <td th:text="${cliente.telefono}"></td>
-                <td>
+                <td sec:authorize="hasRole('ADMIN')">
                     <a th:href="@{/listar/editar/{id}(id=${cliente.id})}"><i class="fa-solid fa-user-pen btn btn-info" ></i></a>
                     <a th:href="@{/listar/eliminar/{id}(id=${cliente.id})}"><i class="fa-solid fa-user-minus btn btn-danger "></i></a>
                 </td>
             </tr>
         </table>
+        <div sec:authorize="hasRole('ADMIN')">
+            <button class="btn btn-primary" ><a th:href="@{/listar/nuevos}" class="text-white" style="text-decoration:none">Agregar Cliente</a></button>
+        </div>
 
-        <button class="btn btn-primary" ><a th:href="@{/listar/nuevos}" class="text-white" style="text-decoration:none">Agregar Cliente</a></button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
